--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Power’4 Web – Accueil</title>
-    <link rel="stylesheet" href="static/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Puissance 4</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header><h1>Puissance 4 – Accueil</h1></header>
-
-<div class="container">
-    <p>Bienvenue sur Power’4 Web !</p>
-    <p>Découvrez le jeu, ses règles, et lancez une nouvelle partie.</p>
-    <p><strong>Règle rapide :</strong> alignez 4 jetons horizontalement, verticalement ou en diagonale.</p>
-
-    <a href="game_init.html">
-        <button>Commencer une partie</button>
-    </a>
-
-    <br><br>
-
-    <a href="game_scoreboard.html">Voir le scoreboard</a>
-</div>
-
+    <nav class="navbar">
+        <a href="#" class="logo">Puissance 4</a> 
+        <div class="nav-links">
+            <ul>
+                <li><a href="#">Acceuil</a></li>
+                <li><a href="#">Régles</a></li>
+                <li><a href="#">scoreboard</a></li>
+            </ul>
+        </div>
+    </nav>
+    
 </body>
 </html>
