--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 <body>
 
     <nav class="navbar">
-        <a href="#" class="logo">Puissance 4</a> 
+        <div class="logo">
+             <img src="assets/logo/logo puissance 4.png" alt="Puissance4">
+        </div>
+
         <div class="nav-links">
             <ul>
-                <li><a href="#">Acceuil</a></li>
+                <li class="active"><a href="#">Acceuil</a></li>
                 <li><a href="#">Régles</a></li>
                 <li><a href="#">scoreboard</a></li>
             </ul>
         </div>
     </nav>
     
+        <div class="center-screen">
+            <h1>Bienvenue sur Puissance 4</h1>
+                <a class="btn primary" href="/game_init.html">Jouer</a>
+        </div>
+
 </body>
 </html>
